--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:4306/matura
+spring.datasource.username=matura
+spring.datasource.password=matura
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
