--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.7.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -80,6 +85,15 @@
                         </exclude>
                     </excludes>
                 </configuration>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.10.1</version>
+                    <configuration>
+                        <source>17</source>
+                        <target>17</target>
+                    </configuration>
+                </plugin>
             </plugin>
         </plugins>
     </build>
